Fixes Division Integration Test