@@ -13,7 +13,9 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -43,7 +45,7 @@ public class ParksharkAuthenticationProvider implements AuthenticationProvider {
     }
 
     private Collection<? extends GrantedAuthority> roleToGrantedAuthority(Role role) {
-        return List.of(new SimpleGrantedAuthority(role.toString()));
+        return Collections.singletonList(new SimpleGrantedAuthority(role.toString()));
     }
 
     @Override
